
2008/05/30: Martin Preuss<martin@libchipcard.de>
------------------------------------------------
- fixed a bug in io_http.c (was waiting until timeout with a special 
  EBICS server)


===========================================================================
MARK: released gwenhywfar-3.3.2 (2008/05/27)
===========================================================================


2008/05/06: Martin Preuss<martin@libchipcard.de>
------------------------------------------------
- io_http.c: fixed a bug in chunked download mode


===========================================================================
MARK: released gwenhywfar-3.3.1 (2008/04/25)
===========================================================================


2008/04/25: Martin Preuss<martin@libchipcard.de>
------------------------------------------------
- fixed a bug


===========================================================================
MARK: released gwenhywfar-3.3.0 (2008/04/22)
===========================================================================


2008/04/13: Martin Preuss<martin@libchipcard.de>
------------------------------------------------
- configure.ac: added checks for plugins to be built
- m4/ssl.m4: no longer abort if OpenSSL is not available
- plugins/: added a convenience library which includes all plugins built
- plugins/*: create convenience libraries for all plugins and let the
  plugins link against that. This allows for static linkage of the plugins
  into an application.
- src/base/plugin.{c,h}: added function GWEN_PluginManager_AddPlugin()


===========================================================================
MARK: released gwenhywfar-3.2.0 (2008/03/16)
===========================================================================


2008/03/12: Martin Preuss<martin@libchipcard.de>
------------------------------------------------
- added function GWEN_Crypt_Token_KeyInfo_SetKeySize()
- changed behaviour of GWEN_Crypt_TokenFile__SetKeyInfo(): Now we don't